# Flowstate

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: analytics_dashboard_grounding.py  evaluation.py  github_review_grounding.py
src/flowstate/: __init__.py  context.py  schemas.py
tests/: test_context.py  test_examples.py  test_schemas.py
